[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specter2_0"
version = "1.0.1"
description = "Embeddings for scientific papers"
readme = "README.md"
requires-python = ">=3.8,<3.11"
license = {file = "LICENSE.md"}
authors = [
    {name = "Amanpreet Singh"},
    {name = "Mike D'Arcy"},
    {name = "Arman Cohan"},
    {name = "Doug Downey"},
    {name = "Sergey Feldman"}
]
urls = {Homepage = "https://github.com/allenai/SPECTER2_0"}

dependencies = [
    "adapters>=0.1.0",
    "attrs==22.2.0",
    "build==0.10.0",
    "certifi==2022.12.7",
    "charset-normalizer==3.0.1",
    "click==8.1.3",
    "exceptiongroup==1.1.0",
    "filelock==3.9.0",
    "huggingface-hub>=0.12.1,<0.26.0",
    "idna==3.4",
    "iniconfig==2.0.0",
    "joblib==1.2.0",
    "numpy==1.24.2",
    "packaging==23.0",
    "Pillow==9.4.0",
    "pluggy==1.0.0",
    "pydantic==1.10.5",
    "pyproject_hooks==1.0.0",
    "pytest==7.2.1",
    "PyYAML==6.0",
    "regex==2022.10.31",
    "requests==2.28.2",
    "sacremoses==0.0.53",
    "six==1.16.0",
    "tokenizers>=0.12.1",
    "tomli==2.0.1",
    "torch==1.13.1",
    "torchvision==0.14.1",
    "torchaudio==0.13.1",
    "tqdm==4.64.1",
    "transformers==4.35.2",
    "typing_extensions==4.5.0",
    "urllib3==1.26.14"
]

[project.optional-dependencies]
timo = [
    "build==0.10.0",
    "pydantic==1.10.5",
    "pytest==7.2.1"
]

[tool.setuptools]
packages = ["specter2_0"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
